--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@ body {
   color: #362a2b;
 }
 
-@media (min-width: 100%) and (min-height: 100%) {
+@media (min-width: 640px) and (min-height: 640px) {
   .slide .content {
     bottom: 70px;
-    left: 100%;
-    width: 100%;
+    left: -600px;
+    width: 600px;
     padding: 2rem;
     line-height: 1.6;
   }
