--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body {
 
 .slider {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
