--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body {
 
 .slider {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -57,8 +57,7 @@ body {
   background: url("3.png") no-repeat
     center top/cover;
 }
-
-  .slide:nth-child(4) {
+.slide:nth-child(4) {
   background: url("4.png") no-repeat
     center top/cover;
 }
@@ -86,6 +85,7 @@ body {
   background: url("10.png") no-repeat
     center top/cover;
 }
+
 
 .buttons button#prev {
   position: absolute;
