--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ body {
 
 .slider {
   position: relative;
-  width: 952px;
-  height: 409px;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   max-width:100vw;
 }
